# worldview-extractor

./: .gitignore  AGENTS.md  CHANGELOG.md  IMPLEMENTATION_QUICKSTART.md  README.md  README_CLEAN.txt  RELEASING.md  RESTRUCTURING_NARRATIVE.md  SPECIFICATION-v0.2.md  SPECIFICATION.md  WEAVE_V1_VISION_AND_PLAN.md  pyproject.toml  weave_adversarial_critique.prose
.archive/: CRATE_RECOMMENDATIONS.md  INGESTION_QUICKSTART.md  INGESTION_RESEARCH_INDEX.md  REBUILD_PLAN.md  RESEARCH_SUMMARY.md  RUST_RESEARCH_INDEX.md  RUST_RESEARCH_SUMMARY.txt  STORAGE_DECISION_MATRIX.md  VERSIONING_INDEX.md  VERSIONING_QUICK_START.md  WORLDVIEW_RESEARCH_INDEX.md
.archive/python-legacy/: AGENTS.md
.archive/python-legacy/src/wve/: __init__.py  cache.py  classify.py  cli.py  cluster.py  identity.py  ingest.py  quotes.py  store.py  theme.py
.archive/python-legacy/src/wve/display/: summary.py
.archive/python-legacy/src/wve/prompts/: __init__.py  fuzzy_select.py  multi_select.py
.archive/python-legacy/src/wve/tui/: app.py  browser.py  execution.py  wizard.py
.archive/python-legacy/tests/: test_classify.py  test_identity.py  test_ingest.py  test_pipeline.py  test_quotes.py  test_run.py  test_search.py  test_synthesize.py
.archive/python-legacy/tests/fixtures/: sample_clusters.json  sample_extraction.json  sample_transcript.txt  sample_transcript_noisy.txt
.beads/: issues.jsonl
data/eridanus/: worldview-manual.md
data/skinner/: search.json
data/skinner-full/: search.json
docs/: INDEX.md  TUI_SPEC.md  TUI_V2_SPEC.md
docs/research/: RESEARCH_SOURCES.md
docs/research/analysis/: BELIEF_EXTRACTION_RESEARCH.md  IMPLEMENTATION_GUIDE.md
docs/research/harness/: HARNESS_QUICK_REFERENCE.md  LLM_HARNESS_INDEX.md  LLM_HARNESS_INTEGRATION.md  OPENCLAW_RESEARCH_SUMMARY.md
docs/research/implementation/: RUST_CODE_EXAMPLES.md  RUST_IMPLEMENTATION_ROADMAP.md  RUST_NLP_ECOSYSTEM_RESEARCH.md
docs/research/ingestion/: CONTENT_INGESTION_ARCHITECTURE.md  INGESTION_CODE_PATTERNS.md
docs/research/storage/: VERSIONED_STORAGE_RESEARCH.md  VERSIONING_IMPLEMENTATION_GUIDE.md
src/wve/: __init__.py  branding.py  cli.py  config.py  extract.py  models.py  rag.py  search.py  store.py  synthesize.py  transcripts.py
src/wve/display/: __init__.py  preview.py  progress.py
src/wve/tui/: __init__.py  app.py  ask.py  keys.py  wizard.py
src/wve/ui/: __init__.py  panels.py
test_sources_demo/: weave_test.json
tests/: conftest.py  test_cluster.py  test_extract.py  test_robustness.py  test_run.py  test_transcripts.py
wve-rs/: Cargo.toml  HARNESS_IMPLEMENTATION_GUIDE.md
wve-rs/src/: cli.rs  embeddings.rs  lib.rs  main.rs  models.rs  transcripts.rs  wizard.rs
wve-rs/src/comparison/: blindspots.rs  diff.rs  mod.rs
wve-rs/src/eval/: criteria.rs  fixtures.rs  mod.rs  runner.rs
wve-rs/src/extraction/: ingest.rs  mod.rs  prompt.rs  schema.rs
wve-rs/src/harness/: config.rs  detect.rs  mod.rs
wve-rs/src/storage/: db.rs  error.rs  json_store.rs  mod.rs
wve-rs/src/synthesis/: json.rs  markdown.rs  mod.rs  movement.rs
wve-rs/src/tui/: app.rs
(+1 files in other folders)
